--- a/ar-contact.html
+++ b/ar-contact.html
@@ -524,10 +524,12 @@
           <li><strong>اجتماع عبر الإنترنت</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (اجتماع فردي، يرجى الحجز مسبقاً)</li>
           <li><strong>ينكدين</strong>: <a href="https://www.linkedin.com/in/xuhong" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong</span></a><br /></li>
+                class='blue'>linkedin.com/in/xuhong</span></a> (المتابعون: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>معرف جوجل الباحث العلمي</strong>: <a
               href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"><span
-                class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+                class='blue'>UNchM2kAAAAJ&hl</span></a> (الاستشهادات: <span
+              class="google_scholar_citation"></span>+)<br /></li>
         </ul>
 
 
@@ -599,7 +601,7 @@
         لأجل <strong>الاستمرار في اللعب</strong>.<br />
         <small>حقوق النشر © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | الدكتور هونغ شو
-          | تحديث: 08.2024
+          | تحديث: <span class="web_update_month"></span>.<span class="web_update_year">
         </small>
       </p>
 
@@ -772,6 +774,7 @@
     };
   </script>
 
+  <script type="text/javascript" src="update_info_script.js"></script>
 
 
   <!-- End Document
