--- a/ar-resume.html
+++ b/ar-resume.html
@@ -531,7 +531,7 @@
       <div class="doc-section" id="academic-services">
         <h3 style="text-align: right;">الخدمات الأكاديمية</h3>
         <ul class="square" style="text-align: right; direction: rtl;">
-          <li><strong>مراجع (أكثر من 40 ورقة): </strong><br>
+          <li><strong>مراجع (أكثر من <span class="no_of_reviews"></span> ورقة): </strong><br>
             - <strong>Energy Conversion and Management</strong> (عامل التأثير: 11.2، 2021)<br>
             - <strong>Applied Energy</strong> (عامل التأثير: 11.4، 2022)<br>
             - <strong>Journal of Power Sources</strong> (عامل التأثير: 9.13، 2022)<br>
@@ -727,10 +727,12 @@
           <li><strong>اجتماع عبر الإنترنت</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (اجتماع فردي، يرجى الحجز مسبقاً)</li>
           <li><strong>ينكدين</strong>: <a href="https://www.linkedin.com/in/xuhong" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong</span></a><br /></li>
+                class='blue'>linkedin.com/in/xuhong</span></a> (المتابعون: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>معرف جوجل الباحث العلمي</strong>: <a
               href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"><span
-                class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+                class='blue'>UNchM2kAAAAJ&hl</span></a> (الاستشهادات: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVN"><img src="https://www.flagcounter.me/eVN/"
               alt="Flag Counter"></a>
@@ -798,7 +800,7 @@
         لأجل <strong>الاستمرار في اللعب</strong>.<br />
         <small>حقوق النشر © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | الدكتور هونغ شو
-          | تحديث: 08.2024
+          | تحديث: <span class="web_update_month"></span>.<span class="web_update_year">
         </small>
       </p>
 
@@ -970,6 +972,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
 
 
