--- a/ar.html
+++ b/ar.html
@@ -521,9 +521,12 @@
 
         حالياً، يعمل الدكتور هونغ شو كمهندس بحث وتطوير متخصص في <strong>أنظمة الطاقة الإلكترونية</strong> مقره ميونيخ،
         ملتزماً بتحقيق الحياد الكربوني في قطاعات <strong>الطاقة</strong> و<strong>النقل</strong>. طوال مسيرته المهنية،
-        عمل مع شركات دولية ومؤسسات أكاديمية في أوروبا والصين، حيث نشر أكثر من <strong>15 ورقة بحثية</strong> بما يقارب
-        <strong>300 اقتباس</strong>، وحصل على <strong>3 براءات اختراع</strong>. بالإضافة إلى ذلك، رأس جلسة في <strong><a
-            href="https://unfccc.int/" target="_blank">مؤتمر الأمم المتحدة للتغير المناخي</a></strong> في بون، شارك في
+        عمل مع شركات دولية ومؤسسات أكاديمية في أوروبا والصين، حيث نشر أكثر من <strong><span class="no_of_papers"></span>
+          ورقة بحثية</strong> بما يقارب
+        <strong><span class="google_scholar_citation"></span> اقتباس</strong>، وحصل على <strong><span
+            class="no_of_patents"></span> براءات
+          اختراع</strong>. بالإضافة إلى ذلك، رأس جلسة في <strong><a href="https://unfccc.int/" target="_blank">مؤتمر
+            الأمم المتحدة للتغير المناخي</a></strong> في بون، شارك في
         مجموعة الخبراء في <strong><a href="https://unece.org/" target="_blank">اللجنة الاقتصادية لأوروبا التابعة للأمم
             المتحدة</a></strong> بجنيف، وكان عضوًا في <strong>لجنة تحكيم أكاديمية</strong> في <strong><a
             href="https://symposium.org/" target="_blank">منتدى سانت جالين</a></strong> في سويسرا. الدكتور شو أيضاً
@@ -698,10 +701,12 @@
           <li><strong>اجتماع عبر الإنترنت</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (اجتماع فردي، يرجى الحجز مسبقاً)</li>
           <li><strong>ينكدين</strong>: <a href="https://www.linkedin.com/in/xuhong" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong</span></a><br /></li>
+                class='blue'>linkedin.com/in/xuhong</span></a> (المتابعون: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>معرف جوجل الباحث العلمي</strong>: <a
               href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en" target="_blank"><span
-                class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+                class='blue'>UNchM2kAAAAJ&hl</span></a> (الاستشهادات: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVN"><img src="https://www.flagcounter.me/eVN/"
               alt="Flag Counter"></a>
@@ -763,7 +768,7 @@
         لأجل <strong>الاستمرار في اللعب</strong>.<br />
         <small>حقوق النشر © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | الدكتور هونغ شو
-          | تحديث: 08.2024
+          | تحديث: <span class="web_update_month"></span>.<span class="web_update_year">
         </small>
       </p>
 
@@ -935,6 +940,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
 
 
