--- a/cn-activities.html
+++ b/cn-activities.html
@@ -508,14 +508,14 @@
 
         <div class="video-container hidden-mobile">
           <video controls poster="images/Bonn_preview_cn.gif">
-            <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
+            <source src="/images/UN_Bonn_2023_CN_Subtitle_8MB.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
 
         <div class="video-container display-mobile" style="width:113%;padding-bottom: 63.25%;">
           <video controls poster="images/Bonn_preview_cn.gif">
-            <source src="/images/Bonn_Climate_v1_8MB.mp4" type="video/mp4">
+            <source src="/images/UN_Bonn_2023_CN_Subtitle_8MB.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -1420,11 +1420,14 @@
           <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li>
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: <span class="linkedin_followers"></span>+)<br>
+          </li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: 320+)<br></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+              class="google_scholar_citation"></span>+)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13500+)<br></li>
+              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: <span
+              class="zhihu_followers"></span>+)<br></li>
           <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
                 class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li>
 
@@ -1498,7 +1501,8 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月 <a
+              href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
@@ -1507,7 +1511,6 @@
 
 
     </div><!-- container -->
-
 
     <!-- js partial -->
     <script src="./js/navi7.js"></script>
@@ -1697,6 +1700,7 @@
 
     <script type="text/javascript" src="/js/cn_holiday_display.js"></script>
 
+    <script type="text/javascript" src="update_info_script.js"></script>
 
 
     <!-- End Document
