--- a/cn-contact.html
+++ b/cn-contact.html
@@ -610,11 +610,14 @@
           <!-- <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li> -->
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: <span class="linkedin_followers"></span>+)<br>
+          </li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: 320+)<br></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+              class="google_scholar_citation"></span>+)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13900+)<br></li>
+              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: <span
+              class="zhihu_followers"></span>+)<br></li>
 
         </ul>
         </p>
@@ -683,7 +686,8 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年6月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月 <a
+              href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
@@ -863,6 +867,7 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="/js/navi-mobile.js"></script>
     <script src="/js/navi-sidebar.js"></script>
+    <script type="text/javascript" src="update_info_script.js"></script>
 
 
     <!-- End Document
