--- a/cn-research.html
+++ b/cn-research.html
@@ -694,7 +694,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="publications">
-                <h3>学术论文 <small><small><!---(引用数: <span id="citation-number-container">300+</span>)---></small></small>
+                <h3>学术论文 <small><small><!---(引用数: <span class="google_scholar_citation"></span>+)---></small></small>
                 </h3>
 
                 <ul class="square">
@@ -983,7 +983,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="patents">
-                <h3>国家专利 <small><small><!---(引用数: 18+)---></small></small></h3>
+                <h3>国家专利 <small><small><!---(引用数: <span class="patent_citation"></span>+)---></small></small></h3>
                 <ol>
                     <li>
                         <strong>环形气液界面跳汰磁选装置 [P]</strong><br>
@@ -1011,7 +1011,7 @@
             <hr class="hidden-mobile">
 
             <div class="doc-section" id="dissertations">
-                <h3>学位论文 <small><small>(浏览量: 2100+)</small></small></h3>
+                <h3>学位论文 <small><small>(浏览量: <span class="phd_thesis_views"></span>+)</small></small></h3>
                 <ol>
                     <li>
                         <strong>H. Xu</strong> [ETH], Prof. T. J. Schmidt (导师/ETH), Prof. M. Stampanoni (合作导师/ETH),
@@ -1344,14 +1344,15 @@
                             target="_blank"><span class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)
                     </li>
                     <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-                            target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br>
+                            target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: <span
+                            class="linkedin_followers"></span>+)<br>
                     </li>
                     <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-                            target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数:
-                        320+)<br></li>
+                            target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+                            class="google_scholar_citation"></span>+)<br></li>
                     <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-                            target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者:
-                        13500+)<br></li>
+                            target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: <span
+                            class="zhihu_followers"></span>+)<br></li>
                     <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
                                 class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
                     <a href="https://www.flagcounter.me/details/eVE"><img src="https://www.flagcounter.me/eVE/"
@@ -1438,7 +1439,8 @@
                         2016 -
                         <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script>
                         | 徐泓
-                        <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+                        <small>博士</small> | 更新: <span class="web_update_year"></span>年<span
+                            class="web_update_month"></span>月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
                     </small></p>
             </footer>
 
@@ -1608,6 +1610,7 @@
 
         <script type="text/javascript" src="/js/cn_holiday_display.js"></script>
 
+        <script type="text/javascript" src="update_info_script.js"></script>
 
 
         <!-- End Document
