--- a/cn-resume.html
+++ b/cn-resume.html
@@ -719,7 +719,7 @@
             <!-- - <strong>联合国欧洲经济委员会: 可持续能源(氢能) </strong> 工作组会议成员 (UNECE, 2024)<br> -->
             <!-- - <strong>联合国欧洲经济委员会: 电动交通</strong> 工作组会议成员 (UNECE, 2024)<br> -->
             <hr>
-          <li><strong>审稿人 (40+篇): </strong><br>
+          <li><strong>审稿人 (<span class="no_of_reviews"></span>+篇): </strong><br>
             - <strong>能源转换与管理杂志</strong> (Energy Conversion & Management, 影响因子: 11.2, 2021) <br>
             - <strong>应用能源杂志</strong> (Applied Energy, 影响因子: 11.4, 2022)<br>
             - <strong>电源杂志</strong> (J. Power Sources, 影响因子: 9.13, 2022)<br>
@@ -933,13 +933,14 @@
           <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li>
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: <span class="linkedin_followers"></span>+)<br>
+          </li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数:
-            320+)<br></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+              class="google_scholar_citation"></span>+)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者:
-            13500+)<br></li>
+              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: <span
+              class="zhihu_followers"></span>+)<br></li>
           <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank" target="_blank"><span
                         class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
           <a href="https://www.flagcounter.me/details/eVE"><img src="https://www.flagcounter.me/eVE/"
@@ -1019,7 +1020,8 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月 <a
+              href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
@@ -1190,6 +1192,7 @@
     <script type="text/javascript" src="/js/cn_fanti_translate.js"></script>
 
     <script type="text/javascript" src="/js/cn_holiday_display.js"></script>
+    <script type="text/javascript" src="update_info_script.js"></script>
 
 
     <!-- End Document
