--- a/cn.html
+++ b/cn.html
@@ -505,8 +505,9 @@
         <p align="justify">
           <span class="display-mobile">欢迎来自<span id="location2">地球</span>的朋友 :-）</br></br></span>
 
-          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文15余篇</strong>，并获得<strong>3项专利授权</strong>。曾在<strong><a
-              href="https://unfccc.int/"
+          目前，徐泓博士在德国工业界担任<strong>新能源动力系统</strong>专家工程师，致力于实现<strong>能源与交通</strong>领域<strong>碳中和</strong>。攻读学位期间与跨国企业及中欧学术机构合作发表<strong>论文<span
+              class="no_of_papers"></span>余篇</strong>，并获得<strong><span
+              class="no_of_patents"></span>项专利授权</strong>。曾在<strong><a href="https://unfccc.int/"
               target="_blank">联合国波恩气候变化大会</a></strong>主持“中国<strong>能源转型</strong>与技术创新”主题分会，多次参与<strong><a
               href="https://unece.org/"
               target="_blank">联合国欧洲经济委员会</a></strong>关于<strong>交通与气候专家组</strong>会议以及<strong>氢能工作小组</strong>会议讨论。同时他还担任多项能源和交通领域高引期刊的<strong>审稿人</strong>,
@@ -687,12 +688,14 @@
           <li><strong>线上会议</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1vs1会议, 请提前预约)</li>
           <li><strong>领英</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: 1900+)<br></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (关注者: <span class="linkedin_followers"></span>+)<br>
+          </li>
           <li><strong>谷歌学术</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
-              id="citation-count">320+</span>)<br></li>
+              class="google_scholar_citation"></span>+)<br></li>
           <li><strong>知乎</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
-              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: 13700+)<br></li>
+              target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (关注者: <span
+              class="zhihu_followers"></span>+)<br></li>
           <!-- <li><strong>摄影</strong>: <a href="https://photo.h-xu.com/" target="_blank"
                 target="_blank"><span class='blue'>photo.h-xu.com</span></a> (X-graphy)<br></li> -->
 
@@ -766,7 +769,8 @@
         <p><strong>有限游戏</strong>以<strong>取胜</strong>为目的，<strong>无限游戏</strong>以<strong>延续</strong>游戏为宗旨。<br><small>版权 ©
             2016 -
             <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | 徐泓
-            <small>博士</small> | 更新: 2024年9月 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+            <small>博士</small> | 更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月 <a
+              href="https://www.sigmatraffic.com?ref=232975"></a>
           </small></p>
       </footer>
 
@@ -946,6 +950,7 @@
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="/js/navi-mobile.js"></script>
     <script src="/js/navi-sidebar.js"></script>
+    <script type="text/javascript" src="update_info_script.js"></script>
 
 
     <!-- End Document
