--- a/de-contact.html
+++ b/de-contact.html
@@ -520,10 +520,11 @@
               target="_blank"><span class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte im Voraus
             buchen)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Follower: 1800+)<br></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
               target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Zitate: <span
-              id="citation-count">300+</span>)<br></li>
+              class="google_scholar_citation"></span>+)<br /></li>
           <!-- <li><strong>Zhihu</strong>: <a href="https://www.zhihu.com/people/dr.of.nothing" target="_blank"
             target="_blank"><span class='blue'>zhihu.com/people/dr.of.nothing</span></a> (Followers: 13700+)<br></li> -->
 
@@ -587,7 +588,7 @@
       <p>Ein <strong>endliches Spiel</strong> wird gespielt, um zu gewinnen, während <strong>ein unendliches
           Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aktualisiert: 08.2024
+          Aktualisiert: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -753,6 +754,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
