--- a/en-research.html
+++ b/en-research.html
@@ -1261,9 +1261,11 @@
           <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book in advance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citations: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVF"><img src="https://www.flagcounter.me/eVF/"
               alt="Flag Counter"></a> <!-- https://www.flagcounter.me/regenerate/eVF MFQClYKOU 英语-->
@@ -1334,7 +1336,8 @@
           game</strong> is played for <strong>continuing</strong> the play.<br />
         <small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Updated: 08.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+          Updated: <span class="web_update_month"></span>.<span class="web_update_year"></span> <a
+            href="https://www.sigmatraffic.com?ref=232975"></a>
         </small>
       </p>
     </footer>
@@ -1580,6 +1583,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
