--- a/es-resume.html
+++ b/es-resume.html
@@ -534,7 +534,7 @@
           <!-- - <strong>Representante Juvenil/Presidente de Sesión/Conferencista en la Conferencia sobre el Cambio Climático de Bonn de la UNFCCC</strong> (UNFCCC, 2023)<br> -->
           <!-- - <strong>Miembro del Grupo de Expertos sobre Impactos y Adaptación del Cambio Climático del Transporte Interior de la UNECE</strong> (UNECE-ITC-GE3, 2023)<br> -->
           <!-- <hr> -->
-          <li><strong>Revisor (40+ artículos): </strong><br>
+          <li><strong>Revisor (<span class="no_of_reviews"></span>+ artículos): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Factor de Impacto: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (FI: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (FIo: 9.13, 2022)<br>
@@ -742,9 +742,13 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (reunión 1 a 1, por favor reserve con anticipación)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Seguidores: <span
+              class="linkedin_followers"></span>+)<br />
+          </li>
           <li><strong>Google Académico</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citas: <span
+              class="google_scholar_citation"></span>+)<br />
+          </li>
 
           <a href="https://www.flagcounter.me/details/eVH"><img src="https://www.flagcounter.me/eVH/"
               alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVH  ci9PDTHaO 西班牙语 -->
@@ -804,7 +808,7 @@
       <p><strong>Un juego finito</strong> se juega para ganar, mientras que <strong>un juego infinito</strong> se juega
         para continuar el juego.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dra. Hong Xú |
-          Actualizado: 08.2024
+          Actualizado: <span class="web_update_month"></span>.<span class="web_update_year"></span>
           </pequeño>
       </p>
     </footer>
@@ -971,6 +975,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
