--- a/es.html
+++ b/es.html
@@ -517,8 +517,9 @@
         Actualmente, el Dr. Hong Xu trabaja como <strong>Ingeniero de I+D</strong> especializado en <strong>Sistemas
           e-Power</strong> con sede en Múnich, dedicado a lograr la neutralidad de carbono en los sectores de
         <strong>Energía</strong> y <strong>Transporte</strong>. A lo largo de su carrera, ha trabajado con corporaciones
-        internacionales e instituciones académicas en Europa y China, logrando más de <strong>15 artículos
-          publicados</strong> y <strong>3 patentes otorgadas</strong>. Además,
+        internacionales e instituciones académicas en Europa y China, logrando más de <strong><span
+            class="no_of_papers"></span> artículos
+          publicados</strong> y <strong><span class="no_of_patents"></span> patentes otorgadas</strong>. Además,
         presidió una sesión en la <strong><a href="https://unfccc.int/" target="_blank">Conferencia de la ONU sobre el
             Cambio Climático</a></strong> en Bonn, participó en el Grupo de Expertos de la <strong><a
             href="https://unece.org/" target="_blank">Comisión Económica de la ONU para Europa</a></strong> con sede en
@@ -699,9 +700,13 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (reunión 1 a 1, por favor reserve con anticipación)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Seguidores: <span
+              class="linkedin_followers"></span>+)<br />
+          </li>
           <li><strong>Google Académico</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citas: <span
+              class="google_scholar_citation"></span>+)<br />
+          </li>
 
           <a href="https://www.flagcounter.me/details/eVH"><img src="https://www.flagcounter.me/eVH/"
               alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVH  ci9PDTHaO 西班牙语 -->
@@ -761,7 +766,7 @@
       <p><strong>Un juego finito</strong> se juega para ganar, mientras que <strong>un juego infinito</strong> se juega
         para continuar el juego.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dra. Hong Xú |
-          Actualizado: 08.2024
+          Actualizado: <span class="web_update_month"></span>.<span class="web_update_year"></span>
           </pequeño>
       </p>
     </footer>
@@ -928,6 +933,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
