--- a/fr-resume.html
+++ b/fr-resume.html
@@ -543,7 +543,7 @@
               - <strong>Fellow de Recherche Invité à l'Oxford Institute for Energy Studies</strong> (Oxford Institute for Energy Studies, 2023-2024)<br>
               - <strong>Réviseur Académique au Symposium de Saint-Gall</strong> (Symposium de Saint-Gall, 2023-2024)<br>
               <hr> -->
-          <li><strong>Réviseur (40+ articles): </strong><br>
+          <li><strong>Réviseur (<span class="no_of_reviews"></span>+ articles): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Facteur d'Impact : 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (FI : 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (FI : 9.13, 2022)<br>
@@ -750,9 +750,12 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
             l'avance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Abonnés: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citations: <span
+              class="google_scholar_citation"></span>+)<br /></li>
+
           <a href="https://www.flagcounter.me/details/eVI"><img src="https://www.flagcounter.me/eVI/"
               alt="Flag Counter"></a>
           <!-- https://www.flagcounter.me/regenerate/eVI   DbpqemAJH 法语-->
@@ -812,7 +815,7 @@
       <p><strong>Un jeu fini</strong> est joué pour gagner, tandis qu'<strong>un jeu infini</strong> est joué pour
         continuer le jeu.<br /><small>Droit d'auteur © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hóng Xú |
-          Actualisé: 08.2024
+          Actualisé: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -977,6 +980,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
