--- a/fr.html
+++ b/fr.html
@@ -550,8 +550,9 @@
         Actuellement, le Dr. Hong Xu est <strong>Ingénieur en R&D</strong> spécialisé dans les <strong>systèmes
           e-Power</strong> basé à Munich, dédié à la réalisation de la neutralité carbone dans les secteurs de
         <strong>l'énergie</strong> et des <strong>transports</strong>. Au cours de sa carrière, il a travaillé avec des
-        entreprises internationales et des institutions académiques en Europe et en Chine, réalisant plus de <strong>15
-          articles publiés</strong> et <strong>3 brevets accordés</strong>.
+        entreprises internationales et des institutions académiques en Europe et en Chine, réalisant plus de
+        <strong><span class="no_of_papers"></span>
+          articles publiés</strong> et <strong><span class="no_of_patents"></span> brevets accordés</strong>.
         De plus, il a présidé une session à la <strong><a href="https://unfccc.int/" target="_blank">Conférence de l'ONU
             sur les changements climatiques</a></strong> à Bonn, a participé au Groupe d'experts de la <strong><a
             href="https://unece.org/" target="_blank">Commission économique de l'ONU pour l'Europe</a></strong> basée à
@@ -735,9 +736,12 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
             l'avance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Abonnés: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citations: <span
+              class="google_scholar_citation"></span>+)<br /></li>
+
           <a href="https://www.flagcounter.me/details/eVI"><img src="https://www.flagcounter.me/eVI/"
               alt="Flag Counter"></a>
           <!-- https://www.flagcounter.me/regenerate/eVI   DbpqemAJH 法语-->
@@ -797,7 +801,7 @@
       <p><strong>Un jeu fini</strong> est joué pour gagner, tandis qu'<strong>un jeu infini</strong> est joué pour
         continuer le jeu.<br /><small>Droit d'auteur © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hóng Xú |
-          Actualisé: 08.2024
+          Actualisé: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -962,6 +966,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
