--- a/it-contact.html
+++ b/it-contact.html
@@ -551,9 +551,11 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (incontro 1 a 1, si prega di prenotare in anticipo)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
-          <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
+          <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citazioni: <span
+              class="google_scholar_citation"></span>+)<br /></li>
         </ul>
         </p>
 
@@ -610,7 +612,7 @@
       <p><strong>Una partita finita</strong> viene giocata per vincere, mentre <strong>una partita infinita</strong>
         viene giocata per continuare la partita.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aggiornato: 08.2024
+          Aggiornato: <span class="web_update_month"></span>.<span class="web_update_year"></span>
           </piccolo>
       </p>
     </footer>
@@ -777,6 +779,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
