--- a/it-resume.html
+++ b/it-resume.html
@@ -542,7 +542,7 @@
             - <strong>Ricercatore in Visita presso l'Oxford Institute for Energy Studies</strong> (Oxford Institute for Energy Studies, 2023-2024)<br>
             - <strong>Revisore Accademico presso il Simposio di St. Gallen</strong> (St. Gallen Symposium, 2023-2024)<br>
             <hr> -->
-          <li><strong>Revisore (40+ articoli): </strong><br>
+          <li><strong>Revisore (<span class="no_of_reviews"></span>+ articoli): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Fattore di Impatto: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (FI: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (FI: 9.13, 2022)<br>
@@ -753,9 +753,11 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (riunione 1 a 1, si prega di prenotare in anticipo)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citazioni: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVJ"><img src="https://www.flagcounter.me/eVJ/"
               alt="Flag Counter"></a>
@@ -818,7 +820,7 @@
       <p><strong>Una partita finita</strong> viene giocata per vincere, mentre <strong>una partita infinita</strong>
         viene giocata per continuare la partita.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aggiornato: 08.2024
+          Aggiornato: <span class="web_update_month"></span>.<span class="web_update_year"></span>
           </piccolo>
       </p>
     </footer>
@@ -985,6 +987,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
