--- a/jp-activities.html
+++ b/jp-activities.html
@@ -1430,9 +1430,12 @@
           <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (フォロワー: <span
+              class="linkedin_followers"></span>人)<br /></li>
           <li><strong>グーグル学者</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+              class="google_scholar_citation"></span>回)<br /></li>
+
           <a href="https://www.flagcounter.me/details/eVK"><img src="https://www.flagcounter.me/eVK/"
               alt="Flag Counter"></a>
 
@@ -1495,7 +1498,7 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           徐泓
-          <small>博士</small> | 最終更新: 2024年8月
+          <small>博士</small> | 最終更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月
         </small></p>
     </footer>
 
@@ -1649,6 +1652,7 @@
   <script type="text/javascript" src="/js/block_save_as.js"></script>
 
   <script type="text/javascript" src="/js/cn_holiday_display.js"></script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
