--- a/jp.html
+++ b/jp.html
@@ -513,13 +513,14 @@
 
       <p align="justify">
         <span class="display-mobile">ようこそ、<span id="location2">地球</span>からの友達 :-）</br></br></span>
-
         現在、徐泓
         <!-- (
         <script
           id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>歲) -->
-        博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして働いており、<strong>エネルギーと交通</strong>分野の<strong>カーボンニュートラル</strong>の実現に取り組んでいます。学位取得中に多国籍企業や中欧の学術機関と協力して<strong>15本以上の論文</strong>を発表し、<strong>300回以上引用</strong>され、<strong>3つの特許</strong>を取得しました。<strong><a
-            href="https://unfccc.int/"
+        博士はドイツの産業界で<strong>新エネルギー動力システム</strong>の専門エンジニアとして働いており、<strong>エネルギーと交通</strong>分野の<strong>カーボンニュートラル</strong>の実現に取り組んでいます。学位取得中に多国籍企業や中欧の学術機関と協力して<strong><span
+            class="no_of_papers"></span>本以上の論文</strong>を発表し、<strong><span
+            class="google_scholar_citation"></span>回以上引用</strong>され、<strong><span
+            class="no_of_patents"></span>つの特許</strong>を取得しました。<strong><a href="https://unfccc.int/"
             target="_blank">国連ボン気候変動会議</a></strong>で「中国の<strong>エネルギー転換</strong>と技術革新」をテーマにした分科会を主催し、<strong><a
             href="https://unece.org/"
             target="_blank">国連欧州経済委員会</a></strong>の<strong>交通と気候専門家グループ</strong>会議や<strong>水素エネルギー作業部会</strong>会議にも多く参加しました。また、エネルギーと交通分野の高引用率ジャーナルの<strong>査読者</strong>、スイスの<strong>サンクトガレン国際フォーラム</strong>の<strong>学術審査員</strong>、オーストリアの<strong>ザルツブルク国際シンポジウム</strong>の<strong>研究員</strong>も務めています。アメリカ電気化学会の論文招待および旅行賞、インテルエッジAI奨学金、EUエラスムス奨学金、「チャレンジカップ」全国起業銅賞などを受賞しています。
@@ -682,9 +683,11 @@
           <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (フォロワー: <span
+              class="linkedin_followers"></span>人)<br /></li>
           <li><strong>グーグル学者</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+              class="google_scholar_citation"></span>回)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVK"><img src="https://www.flagcounter.me/eVK/"
               alt="Flag Counter"></a>
@@ -749,7 +752,7 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           徐泓
-          <small>博士</small> | 最終更新: 2024年8月
+          <small>博士</small> | 最終更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月
         </small></p>
     </footer>
 
@@ -918,6 +921,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
