--- a/kr-contact.html
+++ b/kr-contact.html
@@ -546,11 +546,12 @@
                 [at] tum.de</span></a> (여기서 [at]을 @로 교체해 주세요)</li>
           <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 부탁드립니다)</li>
-          <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a> (팔로워: 1800+)<br></li>
-          <li><strong>구글 학술</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (인용 수: <span
-              id="citation-count">300+</span>)<br></li>
+          <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
+                class='blue'>linkedin.com/in/xuhong/</span></a> (팔로어: <span class="linkedin_followers"></span>명)<br />
+          </li>
+          <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (인용 횟수: <span
+              class="google_scholar_citation"></span>회)<br /></li>
 
         </ul>
         </p>
@@ -617,9 +618,8 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2024년 8월
+          <span class="web_update_year"></span>년 <span class="web_update_month"></span>월
         </small>
-
       </p>
     </footer>
 
@@ -786,6 +786,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
