--- a/kr-research.html
+++ b/kr-research.html
@@ -556,7 +556,8 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="publications">
-        <h3>간행물<small><small> (인용: <span id="citation-number-container">300+</span>)</small></small></h3>
+        <h3>간행물<small><small> (인용: <span id="citation-number-container"><span
+                  class="google_scholar_citation"></span>+</span>)</small></small></h3>
 
         <ul class="square">
           <li><strong>에너지 경제 / 정책 / 전략: </strong><br>
@@ -1119,9 +1120,12 @@
           <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
           <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (팔로어: <span class="linkedin_followers"></span>명)<br />
+          </li>
           <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (인용 횟수: <span
+              class="google_scholar_citation"></span>회)<br /></li>
+
           <a href="https://www.flagcounter.me/details/eVL"><img src="https://www.flagcounter.me/eVL/"
               alt="Flag Counter"></a> <!--https://www.flagcounter.me/regenerate/eVL H2Sk4BYCg 韩语-->
 
@@ -1189,9 +1193,8 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2024년 8월
+          <span class="web_update_year"></span>년 <span class="web_update_month"></span>월
         </small>
-
       </p>
     </footer>
 
@@ -1358,6 +1361,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
