--- a/kr-resume.html
+++ b/kr-resume.html
@@ -614,7 +614,7 @@
             <!-- - <strong>유엔 유럽 경제 위원회: 지속 가능한 에너지(수소 에너지) </strong> 작업 그룹 멤버 (UNECE, 2024)<br>
             - <strong>유엔 유럽 경제 위원회: 전기 교통</strong> 작업 그룹 멤버 (UNECE, 2024)<br> -->
             <hr>
-          <li><strong>심사위원 (40편 이상): </strong><br>
+          <li><strong>심사위원 (<span class="no_of_reviews"></span>편 이상): </strong><br>
             - <strong>에너지 변환 및 관리 저널</strong> (Energy Conversion & Management, 영향력 지수: 11.2, 2021) <br>
             - <strong>응용 에너지 저널</strong> (Applied Energy, 영향력 지수: 11.4, 2022)<br>
             - <strong>전원 저널</strong> (J. Power Sources, 영향력 지수: 9.13, 2022)<br>
@@ -844,9 +844,11 @@
           <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
           <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (팔로어: <span class="linkedin_followers"></span>명)<br />
+          </li>
           <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (인용 횟수: <span
+              class="google_scholar_citation"></span>회)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVL"><img src="https://www.flagcounter.me/eVL/"
               alt="Flag Counter"></a> <!--https://www.flagcounter.me/regenerate/eVL H2Sk4BYCg 韩语-->
@@ -915,9 +917,8 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2024년 8월
+          <span class="web_update_year"></span>년 <span class="web_update_month"></span>월
         </small>
-
       </p>
     </footer>
 
@@ -1084,6 +1085,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
