--- a/kr.html
+++ b/kr.html
@@ -538,8 +538,10 @@
         <script
           id="first-script">const currentYear = new Date().getFullYear() - 1993; document.write(currentYear);</script>세) -->
         박사는 독일 산업계에서 <strong>신에너지 동력 시스템</strong> 전문가 엔지니어로 일하고 있으며, <strong>에너지와 교통</strong> 분야의 <strong>탄소 중립</strong>
-        실현에 전념하고 있습니다. 학위 취득 중 다국적 기업 및 중유럽 학술 기관과 협력하여 <strong>15편 이상의 논문</strong>을 발표하고, <strong>300회 이상
-          인용</strong>되었으며, <strong>3건의 특허</strong>를 획득했습니다. <strong><a href="https://unfccc.int/" target="_blank">유엔 본
+        실현에 전념하고 있습니다. 학위 취득 중 다국적 기업 및 중유럽 학술 기관과 협력하여 <strong><span class="no_of_papers"></span>편 이상의 논문</strong>을
+        발표하고, <strong><span class="google_scholar_citation"></span>회 이상
+          인용</strong>되었으며, <strong><span class="no_of_patents"></span>건의 특허</strong>를 획득했습니다. <strong><a
+            href="https://unfccc.int/" target="_blank">유엔 본
             기후 변화 회의</a></strong>에서 "중국의 <strong>에너지 전환</strong>과 기술 혁신" 주제 세션을 주최하고, <strong><a
             href="https://unece.org/" target="_blank">유엔 유럽 경제 위원회</a></strong>의 <strong>교통 및 기후 전문가 그룹</strong> 회의와
         <strong>수소 에너지 작업 그룹</strong> 회의에 여러 차례 참여했습니다. 또한 에너지와 교통 분야의 고인용 저널의 <strong>심사위원</strong>, 스위스 <strong>세인트갈렌
@@ -723,9 +725,12 @@
           <li><strong>온라인 회의</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1대1 회의, 사전 예약 바랍니다)</li>
           <li><strong>링크드인</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+                class='blue'>linkedin.com/in/xuhong/</span></a> (팔로어: <span class="linkedin_followers"></span>명)<br />
+          </li>
           <li><strong>구글 학자 아이디</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (인용 횟수: <span
+              class="google_scholar_citation"></span>회)<br /></li>
+
           <a href="https://www.flagcounter.me/details/eVL"><img src="https://www.flagcounter.me/eVL/"
               alt="Flag Counter"></a>
           <!--https://www.flagcounter.me/regenerate/eVL H2Sk4BYCg 韩语-->
@@ -788,9 +793,8 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           홍쉬 박사 | 업데이트 날짜:
-          2024년 8월
+          <span class="web_update_year"></span>년 <span class="web_update_month"></span>월
         </small>
-
       </p>
     </footer>
 
@@ -957,6 +961,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
