--- a/ru-contact.html
+++ b/ru-contact.html
@@ -532,10 +532,12 @@
           <li><strong>Встреча</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-на-1 встреча, пожалуйста, забронируйте заранее)
           </li>
-          <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"><span
-                class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+          <li><strong>ЛинкедИн</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Подписчики: <span
+              class="linkedin_followers"></span> человек)<br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Цитаты: <span
+              class="google_scholar_citation"></span> раз)<br></li>
 
         </ul>
         </p>
@@ -593,9 +595,8 @@
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
         используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
-          Обновлено: 08.2024
+          Обновлено: <span class="web_update_month"></span>. <span class="web_update_year"></span> г.
         </small>
-
       </p>
     </footer>
 
@@ -757,6 +758,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
