--- a/ru-research.html
+++ b/ru-research.html
@@ -810,7 +810,7 @@
       <hr class="hidden-mobile">
 
       <div class="doc-section" id="patents">
-        <h3>Патенты <small><small>(цитирования: 18+)</small></small></h3>
+        <h3>Патенты <small><small>(цитирования: <span class="patent_citation"></span>+)</small></small></h3>
         <ol>
           <li>
             <strong>Кольцевое устройство для магнитной сепарации на газожидкостном интерфейсе [P]</strong><br>
@@ -1158,9 +1158,12 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (встреча один на один, пожалуйста, бронируйте
             заранее)</li>
           <li><strong>ЛинкедИн</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Подписчики: <span
+              class="linkedin_followers"></span> человек)<br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Цитаты: <span
+              class="google_scholar_citation"></span> раз)<br></li>
+
           <a href="https://www.flagcounter.me/details/eVM"><img src="https://www.flagcounter.me/eVM/"
               alt="Flag Counter"></a> <!--https://www.flagcounter.me/regenerate/eVM 9q1xINQda 俄语-->
 
@@ -1218,9 +1221,8 @@
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
         используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
-          Обновлено: 08.2024
+          Обновлено: <span class="web_update_month"></span>. <span class="web_update_year"></span> г.
         </small>
-
       </p>
     </footer>
 
@@ -1382,6 +1384,8 @@
       };
     };
   </script>
+
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
