--- a/ru.html
+++ b/ru.html
@@ -527,12 +527,14 @@
       <p align="justify">
         <span class="display-mobile">Добро пожаловать, друзья из <span id="location2">всего мира</span>
           :-)</br></br></span>
-
-        В настоящее время доктор Хун Сюй занимает должность <strong>инженера по НИОКР</strong>, специализирующегося на
+        В настоящее время доктор Хун Сюй занимает должность <strong>инженера по
+          НИОКР</strong>, специализирующегося на
         <strong>системах электропитания</strong> с местом работы в Мюнхене, посвятив себя достижению углеродной
         нейтральности в секторах <strong>энергетики</strong> и <strong>транспорта</strong>. За время своей карьеры он
         сотрудничал с международными корпорациями и академическими учреждениями в Европе и Китае, опубликовав более
-        <strong>15 научных статей</strong> с почти <strong>300 цитированиями</strong> и получив <strong>3
+        <strong><span class="no_of_papers"></span> научных статей</strong> с почти <strong><span
+            class="google_scholar_citation"></span>
+          цитированиями</strong> и получив <strong><span class="no_of_patents"></span>
           патента</strong>. Кроме того, он возглавлял сессию на <strong><a href="https://unfccc.int/"
             target="_blank">Конференции ООН по изменению климата</a></strong> в Бонне, участвовал в Группе экспертов
         <strong><a href="https://unece.org/" target="_blank">Экономической комиссии ООН для Европы</a></strong> в Женеве
@@ -713,9 +715,11 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (встреча один на один, пожалуйста, бронируйте
             заранее)</li>
           <li><strong>ЛинкедИн</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Подписчики: <span
+              class="linkedin_followers"></span> человек)<br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Цитаты: <span
+              class="google_scholar_citation"></span> раз)<br></li>
 
           <a href="https://www.flagcounter.me/details/eVM"><img src="https://www.flagcounter.me/eVM/"
               alt="Flag Counter"></a> <!--https://www.flagcounter.me/regenerate/eVM 9q1xINQda 俄语-->
@@ -772,9 +776,8 @@
       <p><strong>Конечная игра</strong> проводится для <strong>выигрыша</strong>, а <strong>бесконечная игра</strong>
         используется для <strong>продолжения</strong> игры. <br /><small>Авторское право © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Доктор Хун Сюй |
-          Обновлено: 08.2024
+          Обновлено: <span class="web_update_month"></span>. <span class="web_update_year"></span> г.
         </small>
-
       </p>
     </footer>
 
@@ -936,6 +939,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
