--- a/de-research.html
+++ b/de-research.html
@@ -996,9 +996,11 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte
             im Voraus buchen)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Zitate: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVG"><img src="https://www.flagcounter.me/eVG/"
               alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
@@ -1056,7 +1058,7 @@
           Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu
           |
-          Aktualisiert: 08.2024
+          Aktualisiert: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -1222,6 +1224,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
