--- a/de-resume.html
+++ b/de-resume.html
@@ -519,7 +519,7 @@
       <div class="doc-section" id="academic-services">
         <h3>Akademische Dienstleistungen</h3>
         <ul class="square">
-          <li><strong>Gutachter (40+ Artikel): </strong><br>
+          <li><strong>Gutachter (<span class="no_of_reviews"></span>+ Artikel): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Impact-Faktor: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (IF: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (IF: 9.13, 2022)<br>
@@ -728,9 +728,11 @@
           <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte im Voraus buchen)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Zitate: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVG"><img src="https://www.flagcounter.me/eVG/"
               alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
@@ -790,7 +792,7 @@
       <p>Ein <strong>endliches Spiel</strong> wird gespielt, um zu gewinnen, während <strong>ein unendliches
           Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aktualisiert: 08.2024
+          Aktualisiert: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -956,6 +958,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
