--- a/de.html
+++ b/de.html
@@ -513,7 +513,8 @@
         <strong>e-Power-Systeme</strong> mit Sitz in München, engagiert für die Erreichung der Klimaneutralität in den
         Sektoren <strong>Energie</strong> und <strong>Transport</strong>. Im Laufe seiner Karriere hat er mit
         internationalen Unternehmen und akademischen Institutionen in Europa und China zusammengearbeitet, über
-        <strong>15 veröffentlichte Artikel</strong> und <strong>3 erteilte
+        <strong><span class="no_of_papers"></span> veröffentlichte Artikel</strong> und <strong><span
+            class="no_of_patents"></span> erteilte
           Patente</strong> erzielt. Zudem leitete er eine Sitzung auf der <strong><a href="https://unfccc.int/"
             target="_blank">UN-Klimakonferenz</a></strong> in Bonn, nahm an der Expertengruppe der <strong><a
             href="https://unece.org/" target="_blank">UN-Wirtschaftskommission für Europa</a></strong> in Genf teil und
@@ -693,9 +694,11 @@
           <li><strong>Online-Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-zu-1-Meeting, bitte im Voraus buchen)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>Google-Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Zitate: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVG"><img src="https://www.flagcounter.me/eVG/"
               alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVG HSNFBsABe 德语 -->
@@ -757,7 +760,7 @@
       <p>Ein <strong>endliches Spiel</strong> wird gespielt, um zu gewinnen, während <strong>ein unendliches
           Spiel</strong> gespielt wird, um das Spiel fortzusetzen.<br /><small>Urheberrechte © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aktualisiert: 08.2024
+          Aktualisiert: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -923,6 +926,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
