--- a/en-resume.html
+++ b/en-resume.html
@@ -527,7 +527,7 @@
             - <strong>Visiting Research Fellow at the Oxford Institute for Energy Studies</strong> (Oxford Institute for Energy Studies, 2023-2024)<br>
             - <strong>Academic Reviewer at the St. Gallen Symposium</strong> (St. Gallen Symposium, 2023-2024)<br>
             <hr> -->
-          <li><strong>Reviewer (40+ papers): </strong><br>
+          <li><strong>Reviewer (<span class="no_of_reviews"></span>+ papers): </strong><br>
             - <strong>Energy Conversion and Management</strong> (Impact Factor: 11.2, 2021)<br>
             - <strong>Applied Energy</strong> (IF: 11.4, 2022)<br>
             - <strong>Journal of Power Sources</strong> (IF: 9.13, 2022)<br>
@@ -741,9 +741,11 @@
           <li><strong>Online Meeting</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1-on-1 meeting, please book in advance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>Google Scholar ID</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citations: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
           <a href="https://www.flagcounter.me/details/eVF"><img src="https://www.flagcounter.me/eVF/"
               alt="Flag Counter"></a> <!-- https://www.flagcounter.me/regenerate/eVF MFQClYKOU 英语-->
@@ -815,7 +817,8 @@
           game</strong> is played for <strong>continuing</strong> the play.<br />
         <small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Updated: 08.2024 <a href="https://www.sigmatraffic.com?ref=232975"></a>
+          Updated: <span class="web_update_month"></span>.<span class="web_update_year"></span> <a
+            href="https://www.sigmatraffic.com?ref=232975"></a>
         </small>
       </p>
     </footer>
@@ -1061,6 +1064,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
