--- a/es-research.html
+++ b/es-research.html
@@ -301,7 +301,7 @@
             <li><a href="es-resume.html">CV</a></li>
             <li><a href="es-activities.html">Actividades</a></li>
             <p>____</p>
-            <li><a href="#contacto"><span style="color: rgb(253, 93, 7);">Contacto</span></a></li>
+            <li><a href="es-contact.html"><span style="color: rgb(253, 93, 7);">Contacto</span></a></li>
             <p>____</p>
             <p></p>
             <img src="images/logo.png" width="45" />
@@ -1001,9 +1001,14 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (reunión 1 a 1, por favor reserve con anticipación)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Seguidores: <span
+              class="linkedin_followers"></span>+)<br />
+          </li>
           <li><strong>Google Académico</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citas: <span
+              class="google_scholar_citation"></span>+)<br />
+          </li>
+
           <a href="https://www.flagcounter.me/details/eVH"><img src="https://www.flagcounter.me/eVH/"
               alt="Flag Counter"></a> <!--  https://www.flagcounter.me/regenerate/eVH  ci9PDTHaO 西班牙语 -->
           <!-- <br>
@@ -1062,7 +1067,7 @@
       <p><strong>Un juego finito</strong> se juega para ganar, mientras que <strong>un juego infinito</strong> se juega
         para continuar el juego.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dra. Hong Xú |
-          Actualizado: 08.2024
+          Actualizado: <span class="web_update_month"></span>.<span class="web_update_year"></span>
           </pequeño>
       </p>
     </footer>
@@ -1229,6 +1234,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
