--- a/fr-contact.html
+++ b/fr-contact.html
@@ -555,9 +555,11 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (réunion en tête-à-tête, veuillez réserver à
             l'avance)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Abonnés: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citations: <span
+              class="google_scholar_citation"></span>+)<br /></li>
 
         </ul>
         </p>
@@ -615,7 +617,7 @@
       <p><strong>Un jeu fini</strong> est joué pour gagner, tandis qu'<strong>un jeu infini</strong> est joué pour
         continuer le jeu.<br /><small>Droit d'auteur © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hóng Xú |
-          Actualisé: 08.2024
+          Actualisé: <span class="web_update_month"></span>.<span class="web_update_year"></span>
         </small></p>
     </footer>
 
@@ -780,6 +782,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
