--- a/it.html
+++ b/it.html
@@ -548,8 +548,11 @@
         Attualmente, il Dott. Hong Xu è un <strong>Ingegnere R&D</strong> specializzato in <strong>Sistemi
           e-Power</strong> con sede a Monaco di Baviera, dedicato a raggiungere la neutralità carbonica nei settori
         <strong>Energia</strong> e <strong>Trasporti</strong>. Nel corso della sua carriera, ha lavorato con aziende
-        internazionali e istituzioni accademiche in Europa e Cina, pubblicando oltre <strong>15 articoli</strong> con
-        quasi <strong>300 citazioni</strong> e ottenendo <strong>3 brevetti</strong>. Inoltre, ha presieduto una
+        internazionali e istituzioni accademiche in Europa e Cina, pubblicando oltre <strong><span
+            class="no_of_papers"></span> articoli</strong> con
+        quasi <strong><span class="google_scholar_citation"></span> citazioni</strong> e ottenendo <strong><span
+            class="no_of_patents"></span>
+          brevetti</strong>. Inoltre, ha presieduto una
         sessione alla <strong><a href="https://unfccc.int/" target="_blank">Conferenza delle Nazioni Unite sui
             Cambiamenti Climatici</a></strong> a Bonn, ha partecipato al Gruppo di Esperti della <strong><a
             href="https://unece.org/" target="_blank">Commissione Economica per l'Europa delle Nazioni
@@ -740,9 +743,11 @@
                 class='blue'>calendly.com/heliosxu/45min</span></a> (riunione 1 a 1, si prega di prenotare in anticipo)
           </li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (Followers: <span
+              class="linkedin_followers"></span>+)<br /></li>
           <li><strong>ID Google Scholar</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a><br /></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (Citazioni: <span
+              class="google_scholar_citation"></span>+)<br /></li>
           <a href="https://www.flagcounter.me/details/eVJ"><img src="https://www.flagcounter.me/eVJ/"
               alt="Flag Counter"></a>
           <!--  https://www.flagcounter.me/regenerate/eVJ iSXKTYjiR 意大利语  -->
@@ -801,7 +806,7 @@
       <p><strong>Una partita finita</strong> viene giocata per vincere, mentre <strong>una partita infinita</strong>
         viene giocata per continuare la partita.<br /><small>Copyright © 2016 -
           <script>const currentYear = new Date().getFullYear(); document.write(currentYear);</script> | Dr. Hong Xu |
-          Aggiornato: 08.2024
+          Aggiornato: <span class="web_update_month"></span>.<span class="web_update_year"></span>
           </piccolo>
       </p>
     </footer>
@@ -968,6 +973,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
