--- a/jp-resume.html
+++ b/jp-resume.html
@@ -545,7 +545,7 @@
             <!-- - <strong>国連欧州経済委員会: 持続可能なエネルギー(水素エネルギー) </strong> 作業部会メンバー (UNECE, 2024)<br>
             - <strong>国連欧州経済委員会: 電動交通</strong> 作業部会メンバー (UNECE, 2024)<br> -->
             <hr>
-          <li><strong>査読者 (40+回): </strong><br>
+          <li><strong>査読者 (<span class="no_of_reviews"></span>+回): </strong><br>
             - <strong>エネルギー変換と管理</strong> (Energy Conversion & Management, インパクトファクター: 11.2, 2021) <br>
             - <strong>応用エネルギー</strong> (Applied Energy, IF: 11.4, 2022)<br>
             - <strong>電力源ジャーナル</strong> (J. Power Sources, IF: 9.13, 2022)<br>
@@ -777,9 +777,12 @@
           <li><strong>オンライン会議</strong>: <a href="https://calendly.com/heliosxu/45min" target="_blank"><span
                 class='blue'>calendly.com/heliosxu/45min</span></a> (1対1の会議、事前に予約してください)</li>
           <li><strong>LinkedIn</strong>: <a href="https://www.linkedin.com/in/xuhong/" target="_blank"
-              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a><br /></li>
+              target="_blank"><span class='blue'>linkedin.com/in/xuhong/</span></a> (フォロワー: <span
+              class="linkedin_followers"></span>人)<br /></li>
           <li><strong>グーグル学者</strong>: <a href="https://scholar.google.com/citations?user=UNchM2kAAAAJ&hl=en"
-              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a></li>
+              target="_blank" target="_blank"><span class='blue'>UNchM2kAAAAJ&hl</span></a> (引用数: <span
+              class="google_scholar_citation"></span>回)<br /></li>
+
           <a href="https://www.flagcounter.me/details/eVK"><img src="https://www.flagcounter.me/eVK/"
               alt="Flag Counter"></a>
 
@@ -842,7 +845,7 @@
           <script
             id="second-script">const currentYear2 = new Date().getFullYear(); document.write(currentYear2);</script> |
           徐泓
-          <small>博士</small> | 最終更新: 2024年8月
+          <small>博士</small> | 最終更新: <span class="web_update_year"></span>年<span class="web_update_month"></span>月
         </small></p>
     </footer>
 
@@ -1011,6 +1014,7 @@
       };
     };
   </script>
+  <script type="text/javascript" src="update_info_script.js"></script>
 
   <!-- End Document
 ================================================== -->
